[gd_scene load_steps=5 format=2]

[ext_resource path="res://Managing/Colliders/PlayerDetection.tscn" type="PackedScene" id=1]
[ext_resource path="res://World/Props/Containers/Container.gd" type="Script" id=2]
[ext_resource path="res://Items/ItemSpawn.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=1]
resource_name = "IdleBounce"
length = 1.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0.9, 1.1 ), Vector2( 1.1, 0.9 ) ]
}

[node name="Container" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]

[node name="ItemSpawn" parent="." instance=ExtResource( 3 )]
failChance = 0.0
addForce = true
appearOnready = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="PlayerDetection" parent="." instance=ExtResource( 1 )]

[node name="Sight" parent="PlayerDetection" index="1"]
position = Vector2( 0, -10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "IdleBounce"
anims/IdleBounce = SubResource( 1 )

[connection signal="animation_finished" from="Sprite" to="." method="_on_animation_finished"]

[editable path="PlayerDetection"]
